# rsplit

./: README  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Makefile  Makefile.am  Makefile.in  rsplit.info  rsplit.texi
src/: Makefile.am  rsplit.c
